@@ -4,11 +4,17 @@ package com.github.tno.pokayoke.transform.petrify2uml;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Queue;
+import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.Comparator;
+import java.util.stream.IntStream;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Sets;
@@ -19,77 +25,141 @@ public class NormalizePetrifyOutput {
     }
 
     /**
-     * Normalize the generated Petrify output by relabeling the places.
+     * Normalize the given Petrify output by relabeling the places.
      *
      * @param petrifyOutput The Petrify ouput.
+     * @return The normalized Petrify output.
      */
-    public static void normalize(List<String> petrifyOutput) {
-        // Collect transitions.
+    public static List<String> normalize(List<String> petrifyOutput) {
+        // Collect transition names.
         String dummyIdentifier = ".dummy";
         List<String> transitionDeclarations = petrifyOutput.stream().filter(line -> line.startsWith(dummyIdentifier))
                 .toList();
         Preconditions.checkArgument(transitionDeclarations.size() == 1,
-                "Expected the Petrify output to contain exactly one line of transition declaration.");
-        List<String> transitionNames = new ArrayList<>(Arrays.asList(transitionDeclarations.get(0).split(" ")));
+                "Expected the Petrify output to contain exactly one transition declaration.");
+        String transitionDeclaration = transitionDeclarations.get(0).substring(dummyIdentifier.length()).trim();
+        Set<String> declaredTransitionNames = Sets.newHashSet(transitionDeclaration.split(" "));
+        List<String> allTransitionNames = new ArrayList<>(declaredTransitionNames);
 
+        // Collect specification lines.
         List<String> specificationLines = petrifyOutput.stream()
-                .filter(line -> !line.startsWith(".") && !line.startsWith("#")).collect(Collectors.toList());
+                .filter(line -> !line.startsWith(".") && !line.startsWith("#")).toList();
 
-        // Get the index range of the specification.
-        int startIndex = petrifyOutput.indexOf(specificationLines.get(0));
-        int endIndex = startIndex + specificationLines.size();
-
-        // Resort the specification lines to make sure that the order of them is also deterministic.
-        Collections.sort(specificationLines);
-
-        List<String> newSpecificationLines = new ArrayList<>();
-        Map<String, String> oldToNewPlaceNames = new HashMap<>();
-
-        int placeCount = 0;
+        // Add duplicate transitions to the list, and get a map from parent node to child node.
+        Map<String, List<String>> parentToChild = new HashMap<>();
         for (String currentLine: specificationLines) {
-            List<String> elements = Arrays.asList(currentLine.split(" "));
-            List<String> newElements = new ArrayList<>();
+            // Split the specification line into nodes.
+            List<String> nodes = Arrays.asList(currentLine.split(" "));
+            String parentNode = nodes.get(0);
+            List<String> childNodes = nodes.subList(1, nodes.size());
 
-            for (String element: elements) {
-                String newElement = element;
+            // Add the duplicate transitions.
+            nodes.stream()
+                    .filter(element -> !declaredTransitionNames.contains(element)
+                            && Petrify2PNMLTranslator.isDuplicateTransition(element, declaredTransitionNames))
+                    .forEach(element -> allTransitionNames.add(element));
 
-                // The element is a place if it is neither a declared transition nor a duplicate transition of a
-                // declared transition.
-                if (!transitionNames.contains(element)
-                        && !Petrify2PNMLTranslator.isDuplicateTransition(element, Sets.newHashSet(transitionNames)))
-                {
-                    if (oldToNewPlaceNames.containsKey(element)) {
-                        newElement = oldToNewPlaceNames.get(element);
-                    } else {
-                        newElement = "p" + String.valueOf(placeCount);
-                        oldToNewPlaceNames.put(element, newElement);
-                        placeCount = placeCount + 1;
-                    }
-                }
-                newElements.add(newElement);
-            }
-            newSpecificationLines.add(String.join(" ", newElements));
+            parentToChild.put(parentNode, childNodes);
         }
 
-        Collections.sort(newSpecificationLines);
+        // Sort the transition names.
+        Collections.sort(allTransitionNames);
+        Map<String, Integer> transitionIndices = IntStream.range(0, allTransitionNames.size()).boxed()
+                .collect(Collectors.toMap(allTransitionNames::get, i -> i));
 
-        // Replace the old specification with the new specification.
-        petrifyOutput.subList(startIndex, endIndex).clear();
-        petrifyOutput.addAll(startIndex, newSpecificationLines);
-
-        // Get the marking line.
+        // Get the marking place.
         String markingIdentifier = ".marking";
         List<String> markingLines = petrifyOutput.stream().filter(line -> line.startsWith(markingIdentifier)).toList();
         Preconditions.checkArgument(markingLines.size() == 1,
                 "Expected the Petrify output to contain exactly one marking line.");
         String markingLine = markingLines.get(0);
-        String markingPlaceName = markingLine.substring(markingIdentifier.length()).replace("{", "").replace("}", "")
-                .trim();
+        String markingPlaceName = markingLines.get(0).substring(markingIdentifier.length()).replace("{", "")
+                .replace("}", "").trim();
+        Preconditions.checkArgument(markingPlaceName.split(" ").length == 1,
+                "Expected that there is only one marking place.");
+
+        // Perform breadth-first search and rename places based on the parent-to-child relation.
+        Map<String, String> oldToNewPlaceNames = new LinkedHashMap<>();
+        Queue<String> queue = new LinkedList<>();
+        Set<String> found = new HashSet<>();
+        queue.add(markingPlaceName);
+        found.add(markingPlaceName);
+        int nextPlaceNr = 1;
+
+        while (!queue.isEmpty()) {
+            String currentPlace = queue.poll();
+            List<String> childTransitions = parentToChild.get(currentPlace);
+            Collections.sort(childTransitions);
+
+            // Rename the place that has not been renamed.
+            String placeID = "p" + String.valueOf(nextPlaceNr);
+            String result = oldToNewPlaceNames.put(currentPlace, placeID);
+            Preconditions.checkArgument(result == null,
+                    String.format("Expected that place %s has not been renamed yet.", currentPlace));
+            nextPlaceNr++;
+
+            for (String childTransition: childTransitions) {
+                List<String> places = parentToChild.get(childTransition);
+                Map<String, Integer> placeToIndex = new LinkedHashMap<>();
+
+                // Get the index for the places.
+                for (String place: places) {
+                    List<String> transitions = parentToChild.get(place);
+                    Integer minTransitionIndex = transitions.stream()
+                            .map(transition -> transitionIndices.get(transition))
+                            .collect(Collectors.minBy(Comparator.naturalOrder())).get();
+                    placeToIndex.put(place, minTransitionIndex);
+                }
+
+                // Sort the places based on the index.
+                List<String> sortedPlaces = placeToIndex.entrySet().stream().sorted(Map.Entry.comparingByValue())
+                        .map(entry -> entry.getKey()).toList();
+
+                // Enqueue the places.
+                for (String place: sortedPlaces) {
+                    if (!found.contains(place)) {
+                        queue.add(place);
+                        found.add(place);
+                    }
+                }
+            }
+        }
+
+        // Construct new specification line by replacing old place names with new place names.
+        List<String> newSpecificationLines = new ArrayList<>();
+        for (String currentLine: specificationLines) {
+            List<String> nodes = Arrays.asList(currentLine.split(" "));
+            List<String> newNodes = nodes.stream().map(node -> oldToNewPlaceNames.getOrDefault(node, node))
+                    .collect(Collectors.toList());
+
+            // Sort the child nodes to make sure the order is deterministic.
+            Collections.sort(newNodes.subList(1, newNodes.size()));
+
+            newSpecificationLines.add(String.join(" ", newNodes));
+        }
+
+        // Sort the new specification lines to make sure the order is deterministic.
+        Collections.sort(newSpecificationLines);
+
+        // Get the index of the start index and end index of the specification.
+        int startIndex = petrifyOutput.indexOf(specificationLines.get(0));
+        int endIndex = startIndex + specificationLines.size();
+
+        // Replace the old specification with the new specification.
+        petrifyOutput.subList(startIndex, endIndex).clear();
+        petrifyOutput.addAll(startIndex, newSpecificationLines);
 
         // Replace the marking place name in the marking line.
         String newMarkingPlaceName = oldToNewPlaceNames.get(markingPlaceName);
+        Preconditions.checkNotNull(newMarkingPlaceName, "Expected that the marking place is renamed.");
         String newMarkingLine = markingLine.replace(markingPlaceName, newMarkingPlaceName);
-        int markingLineIndex = petrifyOutput.indexOf(markingLine);
-        petrifyOutput.set(markingLineIndex, newMarkingLine);
+        petrifyOutput.set(petrifyOutput.indexOf(markingLine), newMarkingLine);
+
+        // Remove the specification unrelated lines. These lines are automatically generated by Petrify to show the
+        // absolute path of the file and the time stamp at which it was generated. They contain non-deterministic
+        // information and should be removed.
+        List<String> normalizedPetrifyOutput = petrifyOutput.stream().filter(line -> !line.startsWith("#")).toList();
+
+        return normalizedPetrifyOutput;
     }
 }
